fixed overflow

--- a/client/style.css
+++ b/client/style.css
@@ -5,8 +5,8 @@ body {
 #container {
     position: absolute;
     width: calc(100vw - 0px);
-    height: calc(100vh - 56px);
-    top: 56;
+    height: calc(100vh - 57px);
+    top: 57;
     left: 0;
     margin: 0;
     overflow: hidden;
